--- a/Santander_custumer_satisfaction_v2.ipynb
+++ b/Santander_custumer_satisfaction_v2.ipynb
@@ -370,7 +370,7 @@
         "Y_train = X_train[\"TARGET\"]\n",
         "X_train = X_train.drop(\"TARGET\", axis=1)\n",
         "Y_test = X_test[\"TARGET\"]\n",
-        "X_test = X_test.drop(\"TARGET\", axis=1)"
+        "X_test = X_test.drop(\"TARGET\", axis=1)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1295,123 +1295,6 @@
         "# Optimization 3: \n",
         "\n",
         "# etc."
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gwbrVDgB6eyO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kdvHno_48DWk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kHkPxmlgi6uT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qA_Ag5iqi6yv",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gsVlxl4ti6xG",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "20ravXSbi6lr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3tp-HpcOi6jq",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PmsY0R4Ti6id",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tLCi8ARxi6dt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
